objects/Restored_Account_Team__c.object
<CustomObject>
    <description>This object is for holding recovered Account Team Members for review.</description>
    <fields>
        <fullName>Account_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restored_Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Team_Role__c</fullName>
        <formula>CASE( Role_Enum__c , 
1, &quot;Lead Qualifier&quot;, 
2, &quot;Pre-Sales Consultant&quot;, 
3, &quot;Channel Manager&quot;, 
4, &quot;Sales Responsible&quot;, 
5, &quot;Executive Sponsor&quot;, 
6, &quot;Account Manager&quot;, 
7, &quot;Sales Manager&quot;, 
&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Team Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Restored Account Teams</relationshipLabel>
        <relationshipName>Restored_Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Column from file 00D1X0000000XDn.account_team_members.dbexport.csv believed to be &quot;Deleted&quot; where D=1 is deleted.</description>
        <inlineHelpText>Checked if the record was deleted in Production ABB</inlineHelpText>
        <label>D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originally_Restored_Account_Team_ID__c</fullName>
        <description>This is the Account Team ID that was part of the file named 00D1X0000000XDn.account_team_members.dbexport.csv</description>
        <label>Originally Restored Account Team ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Enum__c</fullName>
        <description>This is an enumeration value of the Account Team Role that is from the table 00D1X0000000XDn.account_team_members.dbexport.csv.  Using the KZx values when editing the picklist values, the correct enumation order can be determined.</description>
        <label>Role Enum</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Restored Account Team</label>
    <nameField>
        <displayFormat>Restored-{0000}</displayFormat>
        <label>Recovered Account Team Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restored Account Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>